--- a/packages/jest-a/package.json
+++ b/packages/jest-a/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "ts_101",
+  "name": "jest-a",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "jest": "jest",
     "jest-cov": "jest --coverage",
     "test": "mocha",
-    "test-cov": "nyc --all mocha",
-    "clean": "rm -rf ./dist/**"
+    "test-cov": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
@@ -16,20 +15,15 @@
     "typescript": "^2.5.3"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.3",
-    "@types/reflect-metadata": "0.0.5",
-    "coveralls": "^3.0.0",
-    "jest": "^21.2.1",
-    "lerna": "^2.4.0",
-    "reflect-metadata": "^0.1.10",
-    "ts-jest": "^21.1.2",
-    "tslint": "^5.7.0",
     "@types/chai": "^4.0.4",
+    "@types/jest": "^21.1.3",
     "@types/mocha": "^2.2.43",
     "chai": "^4.1.2",
+    "jest": "^21.2.1",
     "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "source-map-support": "^0.5.0",
+    "ts-jest": "^21.1.2",
     "ts-node": "^3.3.0"
   },
   "jest": {
@@ -37,10 +31,6 @@
       "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": ".*\\.test\\.ts$",
-    "testEnvironment": "node",
-    "collectCoverageFrom": [
-      "packages/**/*.ts"
-    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -49,22 +39,20 @@
   },
   "nyc": {
     "include": [
-      "packages/**/*.ts",
-      "packages/jest-b/src/base/*.ts"
+      "src/*.ts",
+      "src/**/*.ts"
     ],
     "extension": [
       ".ts"
     ],
     "exclude": [
-      "**/*.d.ts",
-      "**/*.test.ts"
+      "**/*.d.ts"
     ],
     "reporter": [
-      "text",
+      "text-summary",
       "json",
       "html"
     ],
-    "recursive": true,
     "all": true
   }
 }
