--- a/package.json
+++ b/package.json
@@ -10,29 +10,34 @@
     "test-cov": "nyc --all mocha",
     "clean": "rm -rf ./dist/**",
     "ci": "npm run jest",
-    "ci-cov": "npm run jest-cov"
+    "ci-cov": "npm run jest-cov",
+    "lint": "tslint -c tslint.json src/**/*.ts",
+    "printf": "printf '%s\n' src/**/*.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^2.5.3"
+    "@types/uuid": "^3.4.4",
+    "npm": "^6.4.1",
+    "typescript": "^3.1.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.3",
-    "@types/reflect-metadata": "0.0.5",
-    "coveralls": "^3.0.0",
-    "jest": "^21.2.1",
-    "lerna": "^2.4.0",
-    "reflect-metadata": "^0.1.10",
-    "ts-jest": "^21.1.2",
-    "tslint": "^5.7.0",
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.43",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "nyc": "^11.2.1",
-    "source-map-support": "^0.5.0",
-    "ts-node": "^3.3.0"
+    "@types/chai": "^4.1.7",
+    "@types/jest": "^23.3.9",
+    "@types/mocha": "^5.2.5",
+    "@types/reflect-metadata": "^0.1.0",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
+    "jest": "^23.6.0",
+    "lerna": "^3.4.3",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "reflect-metadata": "^0.1.12",
+    "source-map-support": "^0.5.9",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0"
   },
   "jest": {
     "transform": {
