--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "lib": [
+      "es2017"
+    ],
     "target": "es2017",
     "module": "commonjs",
     "noImplicitAny": true,
